* Thu Dec 19 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.2.0-0
- Add EL8 support

* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 0.2.0-0
- Support concat 6.x.

* Tue Jul 02 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.1.1-0
- Updated README.md
- Created REFERENCE.md
- Support puppetlabs-stdlib 6

* Mon Apr 01 2019 Zach <turtles.be.the.best@gmail.com> - 0.1.0-0
- Added pam_oath.so configuration code
- Added strict type matching of oath::oath_users hieradata
- Created Rspec tests checking correct catalog creation
- Skeleton acceptance test created (and working)
- Updated documentation to reflect current state of the module